# TrueTunes

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  SonosWebPlayerAPI.yaml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: publish.yml
examples/: artist.json  search.json
renderer/: index.html  package-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
renderer/src/: App.tsx  main.tsx
renderer/src/__tests__/: queueAdd.test.tsx
renderer/src/components/: AlbumPanel.tsx  ArtistHero.tsx  ArtistPanel.tsx  CardRow.tsx  ChangelogDialog.tsx  ContainerPanel.tsx  DisplayNameModal.tsx  ErrorBoundary.tsx  ExplicitBadge.tsx  FeedbackDialog.tsx  (+20 more)
server/: azuredeploy.json  index.html  package-lock.json  package.json  tsconfig.json
server/scripts/: deploy.mjs
src/: auth-entra.ts  debug-http.html  debug-ws.html  getPlaybackExtended.d.ts  main.ts  preload.ts  pubsub.ts  telemetry.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: azure.rs  config.rs  lib.rs  main.rs  menu.rs
src-tauri/src/auth/: mod.rs  storage.rs  validate.rs
src-tauri/src/commands/: api.rs  app.rs  auth.rs  config.rs  debug.rs  game.rs  genius.rs  group.rs  image.rs  mini.rs  mod.rs  playback.rs  playlist.rs  profile.rs  queue.rs  stats.rs  telemetry.rs  update.rs  window.rs
src-tauri/src/pubsub/: client.rs  mod.rs
src-tauri/src/sonos/: client.rs  mod.rs  operations.rs  state.rs
src-tauri/src/ws/: client.rs  creds.rs  mod.rs  ticket.rs
(+207 files in other folders)
