[package]
name = "true-tunes"
version = "1.0.38"
description = "Sonos Web Player proxy app"
authors = ["True North IT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "true_tunes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
